Update index.html with template and random text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE = HTML>
+<html>
+  <head>
+    <title>NAME SURNAME</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>NAME SURNAME</h1>
+      <div id="navbar">
+        <ul>
+          <li>
+            <a href="#SECTION_1">SECTION_1</a>
+          </li>
+          <li>
+            <a href="#SECTION_2">SECTION_2</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <div id="break">~*~*~~*~*~~*~*~~*~*~~*~*~~*~*~</div>
+    <div id="intro">
+      <p>WRITE INTRODUCTION.</p>
+      <p>CONTINUE WRITE INTRODUCTION</p>
+      <p>CONTINUE WRITE INTRODUCTION</p>
+      <p>
+        <h2>NEW SECTION</h2>
+        <ul>
+          <li>TEXT SECTION</li>
+          <li>MORE TEXT SECTION</li>
+      </p>
+    </div>
+    <div id="SECTION_1">
+      <h2 id="SECTION_1">SECTION_1</h2> 
+        TEXT SECTION_1
+        <ul>
+          <li>AAAAAAAAAAA</li>
+          <li>BBBBBBBBBBB</li>
+          <li>CCCCCCCCCCC</li>
+        </ul>
+        <p>
+          MORE TEXT
+        </p>
+    </div>
+    <div id="SECTION_2">
+      <h2 id="SECTION_2">SECTION_2</h2> 
+        TEXT SECTION_2
+        <ul>
+          <li>AAAAAAAAAAA</li>
+          <li>BBBBBBBBBBB</li>
+          <li>CCCCCCCCCCC</li>
+        </ul>
+        <p>
+          MORE TEXT
+        </p>
+    </div>
+  </body>
+</html>
