Start to evolve blog

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE = HTML>
 <html>
   <head>
-    <title>NAME SURNAME</title>
+    <title>Roberto Malcotti</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
-      <h1>NAME SURNAME</h1>
+      <h1>Roberto Malcotti</h1>
       <div id="navbar">
         <ul>
           <li>
-            <a href="#SECTION_1">SECTION_1</a>
+            <a href="#Work">Work</a>
           </li>
           <li>
-            <a href="#SECTION_2">SECTION_2</a>
+            <a href="#Creativity">Creativity</a>
           </li>
         </ul>
       </div>
     </header>
     <div id="break">~*~*~~*~*~~*~*~~*~*~~*~*~~*~*~</div>
     <div id="intro">
-      <p>WRITE INTRODUCTION.</p>
-      <p>CONTINUE WRITE INTRODUCTION</p>
-      <p>CONTINUE WRITE INTRODUCTION</p>
+      <p>I am a digital native working with data at the intersection between engineering, analytics and design.</p>
+      <p>Over the years I have worked in many industries, currently I find the FinTech sector the most interesting one.</p>
+      <p>In my free time online, I spend time exploring the interaction between art and technology.</p>
+      <p>In my free time offline, I spend time leveraging my ability to communicate, write and read.</p>
       <p>
-        <h2>NEW SECTION</h2>
+        <h2>How to contact me</h2>
         <ul>
-          <li>TEXT SECTION</li>
-          <li>MORE TEXT SECTION</li>
+          <li>If you want to contact me, there are many channels available.</li>
+          <a href="#" class="fa fa-facebook"></a>
       </p>
     </div>
-    <div id="SECTION_1">
-      <h2 id="SECTION_1">SECTION_1</h2> 
-        TEXT SECTION_1
+    <div id="Work">
+      <h2 id="Work">Work</h2> 
+        TEXT Work
         <ul>
           <li>AAAAAAAAAAA</li>
           <li>BBBBBBBBBBB</li>
@@ -42,9 +44,9 @@
           MORE TEXT
         </p>
     </div>
-    <div id="SECTION_2">
-      <h2 id="SECTION_2">SECTION_2</h2> 
-        TEXT SECTION_2
+    <div id="Creativity">
+      <h2 id="Creativity">Creativity</h2> 
+        TEXT Creativity
         <ul>
           <li>AAAAAAAAAAA</li>
           <li>BBBBBBBBBBB</li>
