--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
       <p>
         <h2>How to contact me</h2>
         <ul>
-          <li>If you want to contact me, there are many channels available.</li>
-          <a href="#" class="fa fa-facebook"></a>
+          <li>If you want to contact me, please email robimalco (at) gmail (dot) com.</li>
+          <li>I am reachable on many different channels:</li>
+          <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
+          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+          <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+          <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
+          <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+          <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
     <div id="Work">
