--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="navbar">
         <ul>
           <li>
-            <a href="#Work">Work</a>
+            <a href="#Technology">Technology</a>
           </li>
           <li>
             <a href="#Creativity">Creativity</a>
@@ -38,17 +38,20 @@
           <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
-    <div id="Work">
-      <h2 id="Work">Work</h2> 
-        TEXT Work
-        <ul>
-          <li>AAAAAAAAAAA</li>
-          <li>BBBBBBBBBBB</li>
-          <li>CCCCCCCCCCC</li>
-        </ul>
-        <p>
-          MORE TEXT
-        </p>
+    <div id="Technology">
+      <h2 id="Technology">
+        Technology
+      </h2> 
+      <br>Technology is shaping the present and the future of any thinkable area.
+      <br>I had the opportunity to ride this wave and to make a living out of it.
+      <p>
+        <br>Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
+        <br>Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
+        <br>Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
+      </p>
+      <p>
+        <br>I own a comprensive knowledge of the whole data stack, and more generally, you can talk with me about almost anything happening inside a browser.
+      </p>
     </div>
     <div id="Creativity">
       <h2 id="Creativity">Creativity</h2> 
