--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
       <br>Technology is shaping the present and the future of any thinkable area.
       <br>I had the opportunity to ride this wave and to make a living out of it.
       <p>
-        <br>Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
-        <br>Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
-        <br>Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
+        <br>
+          Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
+          Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
+          Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
       </p>
       <p>
         <br>I own a comprensive knowledge of the whole data stack, and more generally, you can talk with me about almost anything happening inside a browser.
