--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </ul>
       </div>
     </header>
-    <div id="break">~*~*~~*~*~~*~*~~*~*~~*~*~~*~*~</div>
+    <div class="wrapper">
+	    <div class="divider div-transparent div-arrow-down"></div>
+    </div>
     <div id="intro">
       <p>I am a digital native working with data at the intersection between engineering, analytics and design.</p>
       <p>Over the years I have worked in many industries, currently I find the FinTech sector the most interesting one.</p>
@@ -42,8 +44,9 @@
       <h2 id="Technology">
         Technology
       </h2> 
-      <br>Technology is shaping the present and the future of any thinkable area.
-      <br>I had the opportunity to ride this wave and to make a living out of it.
+      <br>
+        Technology is shaping the present and the future of any thinkable area.
+        I had the opportunity to ride this wave and to make a living out of it.
       <p>
         <br>
           Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
