--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </ul>
       </div>
     </header>
-    <div class="wrapper">
-	    <div class="divider div-transparent div-arrow-down"></div>
+    <div>
+       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     </div>
     <div id="intro">
       <p>I am a digital native working with data at the intersection between engineering, analytics and design.</p>
