Start creativity section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
       </div>
     </header>
-    <div>
+    <div id="break">
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     </div>
     <div id="intro">
@@ -59,15 +59,13 @@
     </div>
     <div id="Creativity">
       <h2 id="Creativity">Creativity</h2> 
-        TEXT Creativity
-        <ul>
-          <li>AAAAAAAAAAA</li>
-          <li>BBBBBBBBBBB</li>
-          <li>CCCCCCCCCCC</li>
-        </ul>
-        <p>
-          MORE TEXT
-        </p>
+        A profile can acquire technical skills in multiple ways.
+        Firstly, with academical education,
+        secondly with work experience,
+        thirdly following ad-hoc courses,
+        and lastly developing personal projects.
+        But there is a skill, borderline between soft and hard, too often under the radar,
+        particularly important for a data analyst, extremely difficult to develop: creativity.
     </div>
   </body>
 </html>
