--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         and lastly developing personal projects.
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data analyst, extremely difficult to develop: creativity.
+      <br>
+        I believe creativity can flourish when developed within a framework of positive attitute.
+        This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
+      <br> 
+        Writing, reading, coding, drawing. Different forms I use to express myself.
+      <br>
     </div>
   </body>
 </html>
