--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE = HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
     <title>Roberto Malcotti</title>
     <link rel="stylesheet" href="style.css" />
@@ -23,42 +23,57 @@
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     </div>
     <div id="intro">
-      <p>I am a digital native working with data at the intersection between engineering, analytics and design.</p>
-      <p>Over the years I have worked in many industries, currently I find the FinTech sector the most interesting one.</p>
-      <p>In my free time online, I spend time exploring the interaction between art and technology.</p>
-      <p>In my free time offline, I spend time leveraging my ability to communicate, write and read.</p>
       <p>
-        <h2>How to contact me</h2>
+        I am a digital native working with data at the intersection between engineering, analytics and design.
+      </p>
+      <p>
+        Over the years I have worked in many industries, currently I find the FinTech sector the most interesting one.
+      </p>
+      <p>
+        In my free time online, I spend time exploring the interaction between art and technology.
+      </p>
+      <p>
+        In my free time offline, I spend time leveraging my ability to communicate, write and read.
+      </p>
+      <p>
+        <h2>
+          How to contact me
+        </h2>
         <ul>
-          <li>If you want to contact me, please email robimalco (at) gmail (dot) com.</li>
-          <li>I am reachable on many different channels:</li>
-          <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
-          <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
-          <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
-          <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-          <a href="https://github.com/robimalco" class="fa fa-github"></a>
+          <li>
+            If you want to contact me, please email robimalco (at) gmail (dot) com.
+          </li>
+          <li>
+            I am reachable on many different channels:
+          </li>
+        </ul>
+        <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
+        <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+        <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+        <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
+        <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+        <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
     <div id="Technology">
       <h2 id="Technology">
         Technology
       </h2> 
-      <br>
         Technology is shaping the present and the future of any thinkable area.
         I had the opportunity to ride this wave and to make a living out of it.
       <p>
-        <br>
-          Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
-          Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
-          Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
+        Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
+        Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
+        Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
       </p>
       <p>
         <br>I own a comprensive knowledge of the whole data stack, and more generally, you can talk with me about almost anything happening inside a browser.
       </p>
     </div>
     <div id="Creativity">
-      <h2 id="Creativity">Creativity</h2> 
+      <h2 id="Creativity">
+        Creativity
+      </h2> 
         A profile can acquire technical skills in multiple ways.
         Firstly, with academical education,
         secondly with work experience,
@@ -66,7 +81,6 @@
         and lastly developing personal projects.
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data analyst, extremely difficult to develop: creativity.
-      <br>
       <p>
         I believe creativity can flourish when developed within a framework of positive attitute.
         This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
