--- a/index.html
+++ b/index.html
@@ -21,31 +21,53 @@
       </div>
     </header>
     <div id="break">
-       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+      ~~~~~~~~~~~~~~
     </div>
     <div id="intro">
       <p>
-        I am a digital native working with data at the intersection between engineering, analytics and design.
+        Roberto is a digital native with 10 years of professional working experience in the field of data,
+        at the intersection between engineering, analytics and design.
       </p>
       <p>
-        Over the years I have worked in many industries, currently I find the FinTech sector the most interesting one.
+        He owns a Bachelor degree in Management Engineering graduated from
+        the University of Applied Sciences of Southern Switzerland,
+        with two additional years of Computer Science from the same institue, in order to strength his IT skills.
       </p>
       <p>
-        In my free time online, I spend time exploring the interaction between art and technology.
+        Roberto has collaborated for established companies, as well as for young startups,
+        gaining experience in multiple fields, such as fashion, logistic, e-commerce, services and banking.
+        Along his professional career he managed many kind of data, from marketing to product,
+        passing through sales, logistic, collections, credit, finance and customers.
       </p>
       <p>
-        In my free time offline, I spend time leveraging my ability to communicate, write and read.
+        He loves to design and develop tools, automating processes while connecting data from different sources.
+        With a deep interest in creating and playing with APIs, and being expert in web scraping,
+        Roberto is able to reverse engineering API endpoints to understand how a website works under the wood.
+        Since 5 years he is an active freelancer in the Berlin startup ecosystem,
+        consulting companies about managing data in a better way.
+      </p>
+      <p>
+        Roberto has an open mind apporach to life, he is always ready to discuss ideas and to share information.
+        In his opinion a modern data professional,
+        in addition to deep technical skills requires discipline, methodology, standardisation,
+        but also a strong amount of curiosity and creativity.
+      </p>
+      <p>
+        In his free time online, he spends time exploring the interaction between art and technology.
+      </p>
+      <p>
+        In his free time offline, he spends time leveraging his ability to move, communicate, write and read.
       </p>
       <p>
         <h2>
-          How to contact me
+          How to get in touch
         </h2>
         <ul>
           <li>
-            If you want to contact me, please email robimalco (at) gmail (dot) com.
+            Please email robimalco (at) gmail (dot) com.
           </li>
           <li>
-            I am reachable on many different channels:
+            Roberto is reachable on many different channels:
           </li>
         </ul>
         <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
@@ -61,14 +83,16 @@
         Technology
       </h2> 
         Technology is shaping the present and the future of any thinkable area.
-        I had the opportunity to ride this wave and to make a living out of it.
+        Roberto has the opportunity to ride this wave and to make a living out of it.
       <p>
         Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
         Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
       </p>
       <p>
-        <br>I own a comprensive knowledge of the whole data stack, and more generally, you can talk with me about almost anything happening inside a browser.
+        You can talk with Roberto about anything regarding data,
+        almost anything about a computer,
+        and more generally, about anything else.
       </p>
     </div>
     <div id="Creativity">
@@ -83,11 +107,11 @@
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data analyst, extremely difficult to develop: creativity.
       <p>
-        I believe creativity can flourish when developed within a framework of positive attitute.
+        Roberto believes creativity can flourish when developed within a framework of positive attitute.
         This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
       </p>
       <p>
-        Writing, reading, coding, drawing. Different forms I use to express myself.
+        Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
       <br>
     <div></div>
