Text update and icons layout

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
         with two additional years of Computer Science from the same institue, in order to strength his IT skills.
       </p>
       <p>
-        Roberto has collaborated for established companies, as well as for young startups,
+        Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, such as fashion, logistic, e-commerce, services and banking.
         Along his professional career he managed many kind of data, from marketing to product,
-        passing through sales, logistic, collections, credit, finance and customers.
+        passing through sales, warehousing, blockchain, credit, finance and customers.
       </p>
       <p>
         He loves to design and develop tools, automating processes while connecting data from different sources.
         With a deep interest in creating and playing with APIs, and being expert in web scraping,
-        Roberto is able to reverse engineering API endpoints to understand how a website works under the wood.
+        Roberto is able to reverse engineer endpoints understanding how a website works under the wood.
         Since 5 years he is an active freelancer in the Berlin startup ecosystem,
         consulting companies about managing data in a better way.
       </p>
       <p>
-        Roberto has an open mind apporach to life, he is always ready to discuss ideas and to share information.
+        Roberto has an open mind apporach to work, being always ready to discuss ideas and to share information.
         In his opinion a modern data professional,
         in addition to deep technical skills requires discipline, methodology, standardisation,
         but also a strong amount of curiosity and creativity.
@@ -67,15 +67,15 @@
             Please email robimalco (at) gmail (dot) com.
           </li>
           <li>
-            Roberto is reachable on many different channels:
+            Roberto is reachable on:
+              <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
+              <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+              <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+              <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
+              <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+              <a href="https://github.com/robimalco" class="fa fa-github"></a>
           </li>
         </ul>
-        <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-        <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
-        <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
-        <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
-        <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-        <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
     <div id="Technology">
