--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         at the intersection between engineering, analytics and design.
       </p>
       <p>
-        He owns a Bachelor degree in Management Engineering graduated from
-        the University of Applied Sciences of Southern Switzerland,
+        He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science from the same institue, in order to strength his IT skills.
       </p>
       <p>
@@ -105,7 +104,7 @@
         thirdly following ad-hoc courses,
         and lastly developing personal projects.
         But there is a skill, borderline between soft and hard, too often under the radar,
-        particularly important for a data analyst, extremely difficult to develop: creativity.
+        particularly important for a data professional, extremely difficult to develop: creativity.
       <p>
         Roberto believes creativity can flourish when developed within a framework of positive attitute.
         This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
