--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <li>
             <a href="#Creativity">Creativity</a>
           </li>
+          <li>
+            <a href="#Languages">Languages</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -30,7 +33,7 @@
       </p>
       <p>
         He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
-        with two additional years of Computer Science from the same institue, in order to strength his IT skills.
+        with two additional years of Computer Science Engineering from the same institue.
       </p>
       <p>
         Roberto has collaborated with established companies, as well as young startups,
@@ -46,16 +49,16 @@
         consulting companies about managing data in a better way.
       </p>
       <p>
-        Roberto has an open mind apporach to work, being always ready to discuss ideas and to share information.
+        Roberto has an open mind apporach to work, always ready to discuss ideas and to share information.
         In his opinion a modern data professional,
         in addition to deep technical skills requires discipline, methodology, standardisation,
         but also a strong amount of curiosity and creativity.
       </p>
       <p>
-        In his free time online, he spends time exploring the interaction between art and technology.
+        In his free time online, he explores the interaction between art and technology.
       </p>
       <p>
-        In his free time offline, he spends time leveraging his ability to move, communicate, write and read.
+        In his free time offline, he leverages his ability to move, communicate, write and read.
       </p>
       <p>
         <h2>
@@ -112,8 +115,24 @@
       <p>
         Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
-      <br>
-    <div></div>
     </div>
+    <div id="Languages">
+      <h2 id="Languages">
+        Languages
+      </h2>
+        Roberto considers languages as the most valuable asset an individual might have.  
+        He paradoxically believes that if any human being would be able to speak any language,
+        wars and inequalities would disappeard.
+      <p>
+        New generation must focus on languages, educational institutions should put this as first priority.
+        It is only during childhood that the real possibility to master a new idiome can occur.
+      </p>
+      <p>
+        You can fluently communicate with Roberto in Italian, English and German.
+        Due to his origin, French and Spanish can be used for basic converstations.
+        He is currently learning Chinese following a life goal project.
+      </p>
+    </div>
+  <div></div>
   </body>
 </html>
