Better <p> with id

--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@
       ~~~~~~~~~~~~~~
     </div>
     <div id="intro">
-      <p>
+      <p id="content">
         Roberto is a digital native with 10 years of professional working experience in the field of data,
         at the intersection between engineering, analytics and design.
       </p>
-      <p>
+      <p id="content">
         He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science Engineering from the same institue.
       </p>
-      <p>
+      <p id="content">
         Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, such as fashion, logistic, e-commerce, services and banking.
         Along his professional career he managed many kind of data, from marketing to product,
         passing through sales, warehousing, blockchain, credit, finance and customers.
       </p>
-      <p>
+      <p id="content">
         He loves to design and develop tools, automating processes while connecting data from different sources.
         With a deep interest in creating and playing with APIs, and being expert in web scraping,
         Roberto is able to reverse engineer endpoints understanding how a website works under the wood.
         Since 5 years he is an active freelancer in the Berlin startup ecosystem,
         consulting companies about managing data in a better way.
       </p>
-      <p>
+      <p id="content">
         Roberto has an open mind apporach to work, always ready to discuss ideas and to share information.
         In his opinion a modern data professional,
         in addition to deep technical skills requires discipline, methodology, standardisation,
         but also a strong amount of curiosity and creativity.
       </p>
-      <p>
+      <p id="content">
         In his free time online, he explores the interaction between art and technology.
       </p>
-      <p>
+      <p id="content">
         In his free time offline, he leverages his ability to move, communicate, write and read.
       </p>
       <p>
@@ -83,15 +83,17 @@
     <div id="Technology">
       <h2 id="Technology">
         Technology
-      </h2> 
+      </h2>
+      <p id="content">
         Technology is shaping the present and the future of any thinkable area.
         Roberto has the opportunity to ride this wave and to make a living out of it.
-      <p>
+      </p>
+      <p id="content">
         Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
         Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
       </p>
-      <p>
+      <p id="content">
         You can talk with Roberto about anything regarding data,
         almost anything about a computer,
         and more generally, about anything else.
@@ -100,7 +102,8 @@
     <div id="Creativity">
       <h2 id="Creativity">
         Creativity
-      </h2> 
+      </h2>
+      <p id="content">
         A profile can acquire technical skills in multiple ways.
         Firstly, with academical education,
         secondly with work experience,
@@ -108,11 +111,12 @@
         and lastly developing personal projects.
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data professional, extremely difficult to develop: creativity.
-      <p>
+      </p>
+      <p id="content">
         Roberto believes creativity can flourish when developed within a framework of positive attitute.
         This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
       </p>
-      <p>
+      <p id="content">
         Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
     </div>
@@ -120,14 +124,16 @@
       <h2 id="Languages">
         Languages
       </h2>
+      <p id="content">
         Roberto considers languages as the most valuable asset an individual might have.  
         He paradoxically believes that if any human being would be able to speak any language,
         wars and inequalities would disappeard.
-      <p>
+      </p>
+      <p id="content">
         New generation must focus on languages, educational institutions should put this as first priority.
         It is only during childhood that the real possibility to master a new idiome can occur.
       </p>
-      <p>
+      <p id="content">
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic converstations.
         He is currently learning Chinese following a life goal project.
