--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <header>
-      <h1>Roberto Malcotti</h1>
+      <p id="main_title">
+        Roberto Malcotti<
+      </p>
       <div id="navbar">
         <ul>
           <li>
@@ -60,24 +62,22 @@
       <p id="content">
         In his free time offline, he leverages his ability to move, communicate, write and read.
       </p>
-      <p>
-        <h2>
-          How to get in touch
-        </h2>
-        <ul>
-          <li>
-            Please email robimalco (at) gmail (dot) com.
-          </li>
-          <li>
-            Roberto is reachable on:
-              <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-              <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
-              <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
-              <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
-              <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-              <a href="https://github.com/robimalco" class="fa fa-github"></a>
-          </li>
-        </ul>
+    </div>
+    <div>
+      <h2>
+        How to get in touch
+      </h2>
+      <p id="content">
+        Please email robimalco (at) gmail (dot) com.
+      </p>
+      <p id="content">
+        Roberto is reachable on:
+          <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
+          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+          <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+          <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
+          <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+          <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
     <div id="Technology">
