--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <p id="main_title">
-        Roberto Malcotti<
+        Roberto Malcotti
       </p>
       <div id="navbar">
         <ul>
