--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Roberto Malcotti</title>
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="file:///home/chronos/u-7ad9060567e96fa8552030aae08c2e6938e2afa2/MyFiles/Downloads/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -12,61 +12,50 @@
         Roberto Malcotti
       </p>
       <div id="navbar">
-        <ul>
-          <li>
-            <a href="#Technology">Technology</a>
-          </li>
-          <li>
-            <a href="#Creativity">Creativity</a>
-          </li>
-          <li>
-            <a href="#Languages">Languages</a>
-          </li>
-        </ul>
+        <a href="#Technology">Technology</a><br>
+        <a href="#Creativity">Creativity</a><br>
+        <a href="#Languages">Languages</a>
       </div>
     </header>
-    <div id="break">
-      ~~~~~~~~~~~~~~
-    </div>
     <div id="intro">
       <p id="content">
         Roberto is a digital native with 10 years of professional working experience in the field of data,
         at the intersection between engineering, analytics and design.
-      </p>
+      </p><br>
       <p id="content">
         He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science Engineering from the same institue.
-      </p>
+      </p><br>
       <p id="content">
         Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, such as fashion, logistic, e-commerce, services and banking.
         Along his professional career he managed many kind of data, from marketing to product,
         passing through sales, warehousing, blockchain, credit, finance and customers.
-      </p>
+      </p><br>
       <p id="content">
         He loves to design and develop tools, automating processes while connecting data from different sources.
         With a deep interest in creating and playing with APIs, and being expert in web scraping,
         Roberto is able to reverse engineer endpoints understanding how a website works under the wood.
         Since 5 years he is an active freelancer in the Berlin startup ecosystem,
         consulting companies about managing data in a better way.
-      </p>
+      </p><br>
       <p id="content">
         Roberto has an open mind apporach to work, always ready to discuss ideas and to share information.
         In his opinion a modern data professional,
         in addition to deep technical skills requires discipline, methodology, standardisation,
         but also a strong amount of curiosity and creativity.
-      </p>
+      </p><br>
       <p id="content">
         In his free time online, he explores the interaction between art and technology.
-      </p>
+      </p><br>
       <p id="content">
         In his free time offline, he leverages his ability to move, communicate, write and read.
       </p>
     </div>
-    <div>
-      <h2>
+    <div class="section">
+      <div class="sub_title">
         How to get in touch
-      </h2>
+      </div>
       <p id="content">
         Please email robimalco (at) gmail (dot) com.
       </p>
@@ -80,10 +69,10 @@
           <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
-    <div id="Technology">
-      <h2 id="Technology">
+    <div class="section" id="Technology">
+      <div class="sub_title">
         Technology
-      </h2>
+      </div>
       <p id="content">
         Technology is shaping the present and the future of any thinkable area.
         Roberto has the opportunity to ride this wave and to make a living out of it.
@@ -99,10 +88,10 @@
         and more generally, about anything else.
       </p>
     </div>
-    <div id="Creativity">
-      <h2 id="Creativity">
+    <div class="section" id="Creativity">
+      <div class="sub_title">
         Creativity
-      </h2>
+      </div>
       <p id="content">
         A profile can acquire technical skills in multiple ways.
         Firstly, with academical education,
@@ -120,10 +109,10 @@
         Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
     </div>
-    <div id="Languages">
-      <h2 id="Languages">
+    <div class="section" id="Languages">
+      <div class="sub_title">
         Languages
-      </h2>
+      </div>
       <p id="content">
         Roberto considers languages as the most valuable asset an individual might have.  
         He paradoxically believes that if any human being would be able to speak any language,
