--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Roberto Malcotti</title>
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="file:///home/chronos/u-7ad9060567e96fa8552030aae08c2e6938e2afa2/MyFiles/Downloads/style.css" />
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
