--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         Please email robimalco (at) gmail (dot) com.
       </p>
       <p id="content">
-        Roberto is reachable on:
+        Alternately on:
           <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
           <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
           <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
