--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         He loves to design and develop tools, automating processes while connecting data from different sources.
         With a deep interest in creating and playing with APIs, and being expert in web scraping,
         Roberto is able to reverse engineer endpoints understanding how a website works under the wood.
-        Since 5 years he is an active freelancer in the Berlin startup ecosystem,
+        Since 5 years he is an active freelancer within the Berlin startup ecosystem,
         consulting companies about managing data in a better way.
       </p><br>
       <p id="content">
@@ -46,10 +46,8 @@
         but also a strong amount of curiosity and creativity.
       </p><br>
       <p id="content">
-        In his free time online, he explores the interaction between art and technology.
-      </p><br>
-      <p id="content">
-        In his free time offline, he leverages his ability to move, communicate, write and read.
+        In his free time online, he explores the interaction between art and technology,
+        while offline, he leverages his ability to move, communicate, write and read.
       </p>
     </div>
     <div class="section">
@@ -60,7 +58,7 @@
         Please email robimalco (at) gmail (dot) com.
       </p>
       <p id="content">
-        Alternately on:
+        Alternately:
           <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
           <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
           <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
@@ -76,12 +74,11 @@
       <p id="content">
         Technology is shaping the present and the future of any thinkable area.
         Roberto has the opportunity to ride this wave and to make a living out of it.
-        Back in 2012, a data analyst was appetibile on the market if able to manipulate information with Microsoft Excel.
+        Back in 2012, a data expert was appetibile on the market if able to manipulate information with Microsoft Excel.
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
-        Nowadays is not enough, an analyst is complete only with advanced statistics, often defined Machine Learning.
-        You can talk with Roberto about anything regarding data,
-        almost anything about a computer,
-        and more generally, about anything else.
+        Nowadays is not enough, a professional is complete only with advanced statistics, often defined Machine Learning.
+        You can talk with Roberto about any of these topics, about anything regarding data,
+        almost anything about computer, and more generally, about anything else.
       </p>
     </div>
     <div class="section" id="Creativity">
@@ -106,11 +103,11 @@
         Languages
       </div>
       <p id="content">
-        Roberto considers languages as the most valuable asset an individual might have.  
+        Roberto considers languages the most valuable asset an individual might have.  
         He paradoxically believes that if any human being would be able to speak any language,
         wars and inequalities would disappeard.
-        New generation must focus on languages, educational institutions should put this as first priority.
-        It is only during childhood that the real possibility to master a new idiome can occur.
+        New generations must focus on languages, and institutions should put this as first priority,
+        since it is during childhood that the real possibility to master an idiome can occur.
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic converstations.
         He is currently learning Chinese following a life goal project.
