--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
       <div class="sub_title">
         How to get in touch
       </div>
-      <p id="content">
-        Please email robimalco (at) gmail (dot) com.
+      <p id="content" style="text-align:center">
+        robimalco (at) gmail (dot) com
       </p>
-      <p id="content">
-        Alternately:
+      <p id="content" style="text-align:center">
           <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
           <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
           <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
