--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
       <p id="main_title">
         Roberto Malcotti
       </p>
-      <div id="navbar">
+        <a href="#Contact">Contact</a><br>
         <a href="#Technology">Technology</a><br>
         <a href="#Creativity">Creativity</a><br>
         <a href="#Languages">Languages</a>
-      </div>
     </header>
     <div id="intro">
       <p id="content">
@@ -50,9 +49,9 @@
         while offline, he leverages his ability to move, communicate, write and read.
       </p>
     </div>
-    <div class="section">
+    <div class="section" id="Contact">
       <div class="sub_title">
-        How to get in touch
+        Contact
       </div>
       <p id="content" style="text-align:center">
         robimalco (at) gmail (dot) com
