--- a/index.html
+++ b/index.html
@@ -27,22 +27,18 @@
       </p><br>
       <p id="content">
         Roberto has collaborated with established companies, as well as young startups,
-        gaining experience in multiple fields, such as fashion, logistic, e-commerce, services and banking.
-        Along his professional career he managed many kind of data, from marketing to product,
-        passing through sales, warehousing, blockchain, credit, finance and customers.
+        gaining experience in multiple fields, managing any kind of data.
       </p><br>
       <p id="content">
-        He loves to design and develop tools, automating processes while connecting data from different sources.
-        With a deep interest in creating and playing with APIs, and being expert in web scraping,
-        Roberto is able to reverse engineer endpoints understanding how a website works under the wood.
-        Since 5 years he is an active freelancer within the Berlin startup ecosystem,
-        consulting companies about managing data in a better way.
+        He loves to design and develop tools, automating processes, connecting data.
+        A deep interest in interacting with APIs, expert in web scraping,
+        Roberto is able to reverse engineer endpoints, understanding how a website works under the wood.
+        Since 5 years he is an active freelancer, consulting companies about managing data in a better way.
       </p><br>
       <p id="content">
         Roberto has an open mind apporach to work, always ready to discuss ideas and to share information.
-        In his opinion a modern data professional,
-        in addition to deep technical skills requires discipline, methodology, standardisation,
-        but also a strong amount of curiosity and creativity.
+        In his opinion a modern data professional in addition to deep technical skills,
+        requires a strong amount of curiosity and creativity.
       </p><br>
       <p id="content">
         In his free time online, he explores the interaction between art and technology,
