--- a/index.html
+++ b/index.html
@@ -20,27 +20,17 @@
       <p id="content">
         Roberto is a digital native with 10 years of professional working experience in the field of data,
         at the intersection between engineering, analytics and design.
-      </p><br>
-      <p id="content">
         He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science Engineering from the same institue.
-      </p><br>
-      <p id="content">
         Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, managing any kind of data.
-      </p><br>
-      <p id="content">
         He loves to design and develop tools, automating processes, connecting data.
         A deep interest in interacting with APIs, expert in web scraping,
         Roberto is able to reverse engineer endpoints, understanding how a website works under the wood.
-        Since 5 years he is an active freelancer, consulting companies about managing data in a better way.
-      </p><br>
-      <p id="content">
-        Roberto has an open mind apporach to work, always ready to discuss ideas and to share information.
+        Since 5 years he is an active freelancer, consulting companies about managing data.
+        With his open mind apporach to work, he is always ready to discuss ideas and to share information.
         In his opinion a modern data professional in addition to deep technical skills,
         requires a strong amount of curiosity and creativity.
-      </p><br>
-      <p id="content">
         In his free time online, he explores the interaction between art and technology,
         while offline, he leverages his ability to move, communicate, write and read.
       </p>
