--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     </header>
     <div id="intro">
       <p id="content">
-        Roberto is a digital native with 10 years of professional working experience in the field of data,
-        at the intersection between engineering, analytics and design.
-        He owns a Bachelor degree in Management Engineering from the University of Applied Sciences of Southern Switzerland,
+        Roberto is a digital native with 10 years of professional experience in the field of data,
+        intersecting engineering, analytics and design.
+        He owns a Bachelor degree in Management Engineering from
+        the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science Engineering from the same institue.
         Roberto has collaborated with established companies, as well as young startups,
-        gaining experience in multiple fields, managing any kind of data.
-        He loves to design and develop tools, automating processes, connecting data.
-        A deep interest in interacting with APIs, expert in web scraping,
-        Roberto is able to reverse engineer endpoints, understanding how a website works under the wood.
-        Since 5 years he is an active freelancer, consulting companies about managing data.
-        With his open mind apporach to work, he is always ready to discuss ideas and to share information.
+        gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
+        automating processes, connecting data. With a deep interest in interacting with APIs,
+        expert in web scraping, Roberto is able to reverse engineer endpoints,
+        understanding how a website works under the wood. He is an active freelancer,
+        consulting companies about managing data. With his open minded apporach,
+        he is always ready to discuss ideas and share information.
         In his opinion a modern data professional in addition to deep technical skills,
         requires a strong amount of curiosity and creativity.
         In his free time online, he explores the interaction between art and technology,
@@ -62,7 +63,7 @@
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
         Nowadays is not enough, a professional is complete only with advanced statistics, often defined Machine Learning.
         You can talk with Roberto about any of these topics, about anything regarding data,
-        almost anything about computer, and more generally, about anything else.
+        almost anything about computer, and more generally speaking, about anything else.
       </p>
     </div>
     <div class="section" id="Creativity">
@@ -78,7 +79,8 @@
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data professional, extremely difficult to develop: creativity.
         Roberto believes creativity can flourish when developed within a framework of positive attitute.
-        This framework requires a strong amount of energy, which can only be obtained with an healty lifestlye.
+        This framework requires a constant amount of fresh energy, which can only
+        be obtained following and choosing an healty lifestlye.
         Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
     </div>
@@ -94,7 +96,7 @@
         since it is during childhood that the real possibility to master an idiome can occur.
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic converstations.
-        He is currently learning Chinese following a life goal project.
+        Currently learning Chinese following a life goal project.
       </p>
     </div>
   <div></div>
