--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         with two additional years of Computer Science Engineering from the same institue.
         Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
-        automating processes, connecting data. With a deep interest in interacting with APIs,
+        automating processes, connecting dots. With a deep interest in interacting with APIs,
         expert in web scraping, Roberto is able to reverse engineer endpoints,
         understanding how a website works under the wood. He is an active freelancer,
         consulting companies about managing data. With his open minded apporach,
